--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BasedIntent" />
+        android:theme="@style/Theme.BasedIntent">
+        <activity
+            android:name=".BasedActivity"
+            android:label="@string/title_activity_based"
+            android:theme="@style/Theme.BasedIntent.NoActionBar"></activity>
+    </application>
 
 </manifest>
